# floonet-strfry

./: .env.example  .gitignore  README.md  TOR-MIGRATION-PLAN.md  docker-compose.yml  install.sh
deploy/: Caddyfile
deploy/landing/: index.html
deploy/strfry/: Dockerfile  apply-spec.sh  strfry.conf
deploy/systemd/: floonet-authority.service  floonet-mixexit.service  floonet-strfry.service
deploy/tor/: Dockerfile  torrc
deploy/us-east/: colocated-authority.conf  deploy.sh  floonet-authority.env.example  nm.floonet.dev.conf
deploy/us-east/floonet-authority.service.d/: 10-us-east.conf
mixexit/: Cargo.toml  Dockerfile
mixexit/src/: main.rs
name-authority/: .dockerignore  Cargo.toml  Dockerfile
name-authority/examples/: nip98.rs
name-authority/src/: config.rs  db.rs  lib.rs  main.rs  node.rs  paid.rs  proof.rs  setup.rs  util.rs
name-authority/src/handlers/: misc.rs  mod.rs  paidapi.rs  registry.rs  transfer.rs
name-authority/tests/: http.rs  setup.rs  transfer.rs
plugin/: floonet_writepolicy.py  test_policy.py
scripts/: purge_public_notes.sh  smoke_test_lockdown.py
